# MarketDigest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  KNOWLEDGE_BASE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh  start.command  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/screenshots/: README.md
config/: digests.yaml  instruments.yaml  prompts.yaml  scoring.yaml  settings.py
docs/: CHANGELOG.md  DECISIONS.md
launchd/: README.md  com.mutaafaziz.market-digest-afternoon.plist  com.mutaafaziz.market-digest-morning.plist  com.mutaafaziz.market-digest-ui.plist  com.mutaafaziz.market-digest-weekly.plist
logs/: digest_history.json
logs/retrace/: 2026-02-11.json
scripts/: run_digest.py  setup_launchd.py  start_ui.py  test_apis.py  test_telegram.py
src/analysis/: daytrade_scorer.py  events.py  fundamentals.py  indicator_analysis.py  llm_analyzer.py  llm_providers.py  multi_tf_scorer.py  options_flow.py  performance.py  sentiment.py  session_tracker.py  technicals.py
src/cache/: manager.py
src/delivery/: telegram_bot.py
src/digest/: action_items.py  afternoon.py  builder.py  daytrade.py  formatter.py  morning.py  weekly.py
src/fetchers/: base.py  custom_fetcher.py  feargreed_fetcher.py  (+6 more)
systemd/: README.md  market-digest.service
tests/: conftest.py  test_formatter.py  test_scoring.py  test_settings.py
ui/: models.py  server.py
(+60 files in other folders)
